added code to count how many times user has clicked the cat

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="koshenka.jpg" width="600">
-        <br>
-        <span><strong>'number' clicks!</strong></span>
+        <div id="image-container">
+            <img src="koshenka.jpg" width="600">
+        </div>
+        <p><strong><span id="clicks">0</span> clicks!</strong></p>
     </div>
     <script src="script.js"></script>
 </body>
