--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div id="image-container">
+        <div class="image-container">
+            <h2>Koshenka</h2>
             <img src="koshenka.jpg" width="600">
+            <br>
+            <p><strong><span class="clicks">0</span> clicks!</strong></p>
         </div>
-        <p><strong><span id="clicks">0</span> clicks!</strong></p>
+        <div class="image-container">
+            <h2>Koshenka 2</h2>
+            <img src="koshenka.jpg" width="600">
+            <br>
+            <p><strong><span class="clicks">0</span> clicks!</strong></p>
+        </div>
+
     </div>
     <script src="script.js"></script>
 </body>
