--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <div class="container">
+        <div class="navigation">
+            <ul class="menu">
 
+            </ul>
+        </div>
+        <div class="kitten-container">
 
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
