--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             </ul>
         </div>
         <div class="kitten-container">
-
+            <h2></h2>
+            <div class="image-container"></div>
+            <br>
+            <span></span>
         </div>
     </div>
     <script src="script.js"></script>
