added structure for admin panel

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <br>
             <span></span>
         </div>
+        <div class="admin-panel">
+            <button type="button">Admin</button>
+            <form id="new-kitten-form">
+                <input type="text" placeholder="Kitten Name">
+                <input type="text" placeholder="picture url">
+                <input type="submit" value="Submit">
+            </form>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
