show and hide admin panel

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
             <span></span>
         </div>
         <div class="admin-panel">
-            <button type="button">Admin</button>
+            <button type="button" id="show-panel">Admin</button>
             <form id="new-kitten-form">
                 <input type="text" placeholder="Kitten Name">
-                <input type="text" placeholder="picture url">
-                <input type="submit" value="Submit">
+                <br>
+                <input type="text" placeholder="Picture URL">
+                <br>
+                <button type="button" id="cancel">Cancel</button>
+                <button type="button" id="save">Save</button>
             </form>
         </div>
     </div>
