--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="admin-panel">
             <button type="button" id="show-panel">Admin</button>
             <form id="new-kitten-form">
-                <input type="text" placeholder="Kitten Name">
+                <input type="text" id="name" placeholder="Kitten Name">
                 <br>
-                <input type="text" placeholder="Picture URL">
+                <input type="text" id="url" placeholder="Picture URL">
                 <br>
                 <button type="button" id="cancel">Cancel</button>
                 <button type="button" id="save">Save</button>
