added fonts and logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Cat Clicker</title>
 </head>
@@ -13,7 +15,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div id="logo">Cat Clicker</div>
+                <div id="logo">
+                    <h1>Cat Clicker =^.^=</h1>
+                </div>
             </div>
         </div>
         <div class="row">
